testdata/golden/sema/invalid/module_import_subpath/main.fmt
import scripts/_foo;

fn main() {
    let _ = scripts.foo();
}
